Atualizando Tarefas Completo

--- a/Tarefa 4 - Python Basics.ipynb
+++ b/Tarefa 4 - Python Basics.ipynb
@@ -1,15 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "bf38668f-3bc6-4aec-9eff-6a0a9153ec5a",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# PARTE PRATICA AULA 04"
+    "# MATHEUS GATTO\n",
+    "\n",
+    "# TAREFA AULA 04 - Python Basics"
    ]
   },
   {
@@ -98,7 +95,7 @@
    },
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Digite a fruta que deseja ver na lista ou 999 para SAIR: maca\n",
