--- a/Tarefa 6 - Organizando Cidades por Estado.ipynb
+++ b/Tarefa 6 - Organizando Cidades por Estado.ipynb
@@ -2,15 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MATHEUS GATTO\n",
+    "\n",
+    "# TAREFA AULA 06 - ORGANIZANDO CIDADES POR ESTADO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ea4430c7-d8bd-4247-ad22-edfe225cd4ec",
    "metadata": {},
    "source": [
-    "Criar script para ler os datasets em /exercicios/municipios-estados — o script deve:\n",
-    "criar uma pasta nomeada com a sigla da UF para cada estado encontrado no arquivo JSON;\n",
-    "organizar as cidades por estado um único arquivo CSV, nomeado como cidades.csv;\n",
-    "salvar esse arquivo cidades.csv dentro da pasta da UF (estado) correspondente.\n",
-    "Importar as pastas e arquivos salvos para um bucket no MinIO.\n",
-    "Exportar os dados para o MongoDB e visualizá-los a partir do banco de dados.  \n"
+    "- Criar script para ler os datasets em /exercicios/municipios-estados — o script deve:\n",
+    "- Criar uma pasta nomeada com a sigla da UF para cada estado encontrado no arquivo JSON;\n",
+    "- Organizar as cidades por estado um único arquivo CSV, nomeado como cidades.csv;\n",
+    "- Salvar esse arquivo cidades.csv dentro da pasta da UF (estado) correspondente.\n",
+    "- Importar as pastas e arquivos salvos para um bucket no MinIO.\n",
+    "- Exportar os dados para o MongoDB e visualizá-los a partir do banco de dados.  \n"
    ]
   },
   {
